--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -8,5 +8,8 @@
 
 .dashboard-content {
    background-color: #f5f6fa;
+   border-top: 1px solid #f5f6fa;
+   border-left: 1px solid #f5f6fa;
    height: calc(100vh - 70px);
+   padding: 30px;
 }
