--- a/src/styles/components/_menu_left.scss
+++ b/src/styles/components/_menu_left.scss
@@ -1,7 +1,7 @@
 .menu-left {
    max-width: 240px;
    width: 100%;
-   height: 100vh;
+   min-height: 100vh;
    .menu-left-icon {
       height: 70px;
       width: 100%;
