--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
-@import './components/header';
-@import './components/menu_left';
+@import 'components/header';
+@import 'components/menu_left';
 
-@import './dashboard.scss';
+@import 'dashboard/dashboard.scss';
+@import 'dashboard/tasks.scss';
