--- a/src/styles/dashboard/_tasks.scss
+++ b/src/styles/dashboard/_tasks.scss
@@ -22,6 +22,15 @@
    > div {
       width: 50%;
    }
+   .task-card {
+      .ant-card-body {
+         display: flex;
+      }
+      .task-card-name {
+         width: fit-content;
+         margin: 0 10px;
+      }
+   }
 }
 
 .add-task-modal {
@@ -34,4 +43,7 @@
    font-size: 18px;
    font-weight: bold;
    margin-bottom: 24px;
+}
+.add-catology {
+   position: relative;
 }
