--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,5 +3,27 @@
 @import 'components/header';
 @import 'components/menu_left';
 
-@import 'dashboard/dashboard.scss';
-@import 'dashboard/tasks.scss';
+.page-layout {
+   display: flex;
+   min-height: 100vh;
+   font-family: 'Inter', sans-serif;
+   .page-layout-right {
+      width: 100%;
+   }
+}
+
+.page-background {
+   background-color: #f5f6fa;
+   border-top: 1px solid #f5f6fa;
+   border-left: 1px solid #f5f6fa;
+   padding: 15px 53px;
+   height: calc(100% - 70px);
+   .page-content {
+      background-color: white;
+      border-radius: 8px;
+      height: 100%;
+      padding: 25px;
+   }
+}
+
+@import 'pages/tasks';
